@@ -17,14 +17,11 @@ IDEAS:
 
 Orgasm/Load/Preg code
 
-Cats frequency!!!
-
 
 REWRITE OF GUI:
 ---------------
 * Animations
 * Gem
-* Level up screen
 * Job screen
 * Combat screen?
 
